--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
 	<title>Andrii Kharytonov CV</title>
 </head>
 <body>
-	
+	<img src="/assets/images/photo_2025-03-20_18-56-01.jpg" width="300px" alt="">
+	<h2>Andrii Kharytonov</h2>
+	<h3>Contact</h3>
+	  <a href="gmail.com"><img src="/assets/images/download.png" width="10px" alt="">
+	haritonovandrey123@gmail.com
+     </a>
+	  <br>
+	  <a href=""><img src="/assets/images/download (1).png" width="10px" alt="">
+		+380999999999 
+	   </a>
+		<br>
+		<a href="https://www.instagram.com/"><img src="/assets/images/download (2).png" width="10px" alt="">
+			haritovandrey
+		</a>
+	<h3>Education</h3>
+	<p>Bachelor of Kherson State University <br> (foreign languages ​​and literature)</p>
+	 <h3>Languages</h3>
+	<ul>
+		<li>English-B1</li>
+		<li>Ukrainian-Fluently</li>
+		<li>French-A1</li>
+	</ul>
 </body>
 </html>
