--- a/index.html
+++ b/index.html
@@ -5,34 +5,84 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Andrii Kharytonov</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <img src="/assets/image/photo_2025-03-20_18-56-01.jpg" width="300px" alt="" />
-  <h2>Andrii Kharytonov</h2>
-  <h3>Contact</h3>
-  <a href="gmail.com"><img src="/assets/image/download.png" width="10px" alt="" />
-    haritonovandrey123@gmail.com
-  </a>
-  <br />
-  <a href=""><img src="/assets/image/download (1).png" width="10px" alt="" />
-    +380999999999
-  </a>
-  <br />
-  <a href="https://www.instagram.com/"><img src="/assets/image/download (2).png" width="10px" alt="" />
-    haritovandrey
-  </a>
-  <h3>Education</h3>
-  <p>
-    Bachelor of Kherson State University <br />
-    (foreign languages ​​and literature)
-  </p>
-  <h3>Languages</h3>
-  <ul>
-    <li>English-B1</li>
-    <li>Ukrainian-Fluently</li>
-    <li>French-A1</li>
-  </ul>
+     <header>
+      <nav>
+        <ul>
+          <li><a href="#profil">Profil</a></li>
+          <li><a href="#aboutme">About me</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#experience">Experience</a> </li>
+          <li><a href="#languages">Languages</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <br>
+      <h1>Andrii Kharytonov</h1>
+     </header>
+     <main>
+      <section id="profil">
+        <img src="/assets/image/photo_2025-03-20_18-56-01.jpg" width="300px"  alt="Profil picture">
+        <h2>Front-end Developer</h2>
+        <p>A beginner front-end developer, I want to develop and learn in this field</p>
+      </section>
+      <br>
+      <section id="aboutme">
+        <h3>About me</h3>
+        <p>
+          I am an aspiring web developer, eager to learn and improve my skills in creating web solutions. Although I’m just starting my journey, I am committed to meeting deadlines and producing work of a high standard. I take pride in ensuring the quality of my projects and pay close attention to detail. I strive to maintain clear and effective communication with clients and team members. 
+          <br>
+          You can check out my work on GitHub: <a href="https://github.com/A-Kharytonov">A-Kharytonov</a></p>
+      </section>
+      <br>
+      <section id="education">
+         <h3>Education</h3>
+          <ul>
+            <li>Kherson State University (teacher of foreign languages)</li>
+            <li>Beetroot academy (Front-end course)</li>
+          </ul>
+      </section>
+      <br>
+      <section id="experience">
+        <h3>Experience</h3>
+        <p>Although I'm just starting out in web development, I have worked on several pet projects to improve my skills. These projects allowed me to practice web technologies like HTML, CSS, JavaScript, and frameworks. I focused on building simple websites and applications, gaining hands-on experience with front-end development and problem-solving.
+        These projects have helped me grow and apply what I’ve learned in real-world scenarios.</p>
+      </section>
+      <br>
+      <section id="languages">
+        <h3>Languages</h3>
+        <ul>
+          <li>Ukrainian-Fluently</li>
+          <li>English-B1</li>
+          <li>French-A1</li>
+        </ul>
+      </section>
+      <br>
+       <section id="contact">
+        <h3>Contact</h3>
+        <ul>
+          <li><img src="/assets/image/download (1).png"    
+          width="10px"  alt=""> Phone: +38099999999</li>
+          <li><img src="/assets/image/download.png" width="10px" alt=""> Mail: <a href="https://gmail.com/">haritonovandrey123@gmail.com</a></li>
+          <li><img src="/assets/image/download (2).png" width="10px" alt=""> Instagram:<a href="https://www.instagram.com/"> haritovandrey</a></li>
+        </ul>
+       </section>
+          <br>
+       <section>
+         <h3>My home work (semantic)</h3>
+         <iframe src="assets/index.html" width="300px" height="200px"></iframe> 
+         <br>
+         <iframe src="/assets/image/watch.htm" width="300px" height="200px" ></iframe>
+       </section>
+       
+     </main>
+     <br>
+     <footer>
+         Thanks for attention
+     </footer>
 </body>
 
 </html>
