--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Andrii Kharytonov</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
      </header>
      <main>
       <section id="profil">
-        <img src="/assets/image/photo_2025-03-20_18-56-01.jpg" width="300px"  alt="Profil picture">
+        <img src="assets/image/photo_2025-03-20_18-56-01.jpg" width="300px"  alt="Profil picture">
         <h2>Front-end Developer</h2>
         <p>A beginner front-end developer, I want to develop and learn in this field</p>
       </section>
@@ -69,19 +69,19 @@
         <h3>Contact</h3>
 
         <ul>
-          <li><img src="/assets/image/download (1).png"    
+          <li><img src="assets/image/download (1).png"    
           width="10px"  alt=""> Phone: +38099999999</li>
-          <li><img src="/assets/image/download.png" width="10px" alt=""> Mail: <a href="https://gmail.com/">haritonovandrey123@gmail.com</a></li>
-          <li><img src="/assets/image/download (2).png" width="10px" alt=""> Instagram:<a href="https://www.instagram.com/"> haritovandrey</a></li>
+          <li><img src="assets/image/download.png" width="10px" alt=""> Mail: <a href="https://gmail.com/">haritonovandrey123@gmail.com</a></li>
+          <li><img src="assets/image/download (2).png" width="10px" alt=""> Instagram:<a href="https://www.instagram.com/"> haritovandrey</a></li>
         </ul>
-        
+
        </section>
           <br>
        <section>
          <h3>My home work (semantic)</h3>
          <iframe src="assets/index.html" width="300px" height="200px"></iframe> 
          <br>
-         <iframe src="/assets/image/watch.htm" width="300px" height="200px" ></iframe>
+         <iframe src="assets/image/watch.htm" width="300px" height="200px" ></iframe>
        </section>
        
      </main>
